Release v0.7.0 — distributed saga state, Community Kafka, telemetry async, compile-time RBAC (#110)
* v0.7 Sprint 1: SPI schemaVersion, bootstrap availability filter, doc sync (#84)

* v0.7 Sprint 1: SPI schemaVersion, bootstrap availability filter, doc sync

FLOW-101 SPI groundwork
- FlowSnapshot gains schemaVersion: long with SCHEMA_VERSION_INITIAL=1L for
  optimistic-concurrency control on durable stores
- v0.6-shape convenience constructor preserves the pre-0.7 call shape so
  existing in-memory bindings (RuntimeFlowInstance.toSnapshot, in-memory
  stores) compile unchanged
- Validation: schemaVersion >= SCHEMA_VERSION_INITIAL
- Parked-enumeration entry point on FlowSnapshotStore intentionally deferred
  to Sprint 3 to co-design with JdbcFlowSnapshotStore

TCK-061 bootstrap availability filter
- BootstrapProviderSelector grows a Predicate overload + package-private
  selectFrom(Stream, ...) core for testability
- CommunityTransportSubsystem migrates from local ServiceLoader to the
  central selector with TransportProvider::isAvailable, ending the asymmetry
  where four bootstraps used the unfiltered selector while only Transport filtered
- New BootstrapProviderSelectorTest covers filter, deterministic tie-break,
  null guards (8 tests)

DOC-061..064 (v0.6 PR-review carry-overs)
- persistence.md: StorageContext.attributes() typed as Map<String, String>
- transport.md: new "Provider Selection — Descending Priority + First-Available"
- security.md: StorageContextBridge link to PrincipalContextMissingException
  / EX-SEC-2001
- crypto.md: new "Operator Notes — FD Resolution on Restricted JDKs"
  (--add-opens, bindFileDescriptor fallback)

Architecture decision drafts (PROPOSED)
- ADR-013 Distributed Saga State Distribution Model: Option A — shared durable
  FlowSnapshotStore + Kafka choreography wake + schemaVersion as OCC discriminator.
  Pre-implementation gate for EPIC-1/3 (Sprints 3-6).
- ADR-014 @RequiresRole Compile-Time RBAC Generation: APT processor + bitmas